--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -21,13 +21,13 @@
                 <small>Error Message</small>
             </div>
             <div class="form-container">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="username">
+                <label for="password">Password</label>
+                <input type="text" id="password" placeholder="Enter Password">
                 <small>Error Message</small>
             </div>
             <div class="form-container">
-                <label for="username">Username</label>
-                <input type="text" id="username" placeholder="username">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="text" id="confirmPassword" placeholder="Enter Password Again">
                 <small>Error Message</small>
             </div>
         </form>
